// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author Chip should render Default 1`] = `
<DocumentFragment>
  <aside
    class="css-11wsbvp-AuthorChipWrapper e1jhd13z4"
  >
    <div
      class="css-1rqnsx9-AuthorChipImageWrapper e1jhd13z3"
    >
      <img
        alt="DSC07717"
        class="css-1ij2yax-ImageWrapper-AuthorChip e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="css-dpf16q-AuthorChipContentWrapper e1jhd13z2"
    >
      <div
        class="css-ohez13-AuthorChipName e1jhd13z0"
      >
        <strong>
          Von 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="https://example.com"
          >
            Foobar
          </a>
        </strong>
      </div>
      <div
        class="css-1hxmk8r-AuthorChipJobTitle e1jhd13z1"
      >
        Editor
      </div>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`Author Chip should render WithClassName 1`] = `
<DocumentFragment>
  <aside
    class="extra-classname css-11wsbvp-AuthorChipWrapper e1jhd13z4"
  >
    <div
      class="css-1rqnsx9-AuthorChipImageWrapper e1jhd13z3"
    >
      <img
        alt="DSC07717"
        class="css-1ij2yax-ImageWrapper-AuthorChip e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="css-dpf16q-AuthorChipContentWrapper e1jhd13z2"
    >
      <div
        class="css-ohez13-AuthorChipName e1jhd13z0"
      >
        <strong>
          Von 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="https://example.com"
          >
            Foobar
          </a>
        </strong>
      </div>
      <div
        class="css-1hxmk8r-AuthorChipJobTitle e1jhd13z1"
      >
        Editor
      </div>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`Author Chip should render WithEmotion 1`] = `
<DocumentFragment>
  <aside
    class="css-11wsbvp-AuthorChipWrapper e1jhd13z4"
  >
    <div
      class="css-1rqnsx9-AuthorChipImageWrapper e1jhd13z3"
    >
      <img
        alt="DSC07717"
        class="css-1ij2yax-ImageWrapper-AuthorChip e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="css-dpf16q-AuthorChipContentWrapper e1jhd13z2"
    >
      <div
        class="css-ohez13-AuthorChipName e1jhd13z0"
      >
        <strong>
          Von 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="https://example.com"
          >
            Foobar
          </a>
        </strong>
      </div>
      <div
        class="css-1hxmk8r-AuthorChipJobTitle e1jhd13z1"
      >
        Editor
      </div>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`Author Chip should render WithoutImage 1`] = `
<DocumentFragment>
  <aside
    class="css-11wsbvp-AuthorChipWrapper e1jhd13z4"
  >
    <div
      class="css-1rqnsx9-AuthorChipImageWrapper e1jhd13z3"
    />
    <div
      class="css-dpf16q-AuthorChipContentWrapper e1jhd13z2"
    >
      <div
        class="css-ohez13-AuthorChipName e1jhd13z0"
      >
        <strong>
          Von 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="https://example.com"
          >
            Foobar
          </a>
        </strong>
      </div>
      <div
        class="css-1hxmk8r-AuthorChipJobTitle e1jhd13z1"
      >
        Editor
      </div>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`Author Chip should render WithoutJobTitle 1`] = `
<DocumentFragment>
  <aside
    class="css-11wsbvp-AuthorChipWrapper e1jhd13z4"
  >
    <div
      class="css-1rqnsx9-AuthorChipImageWrapper e1jhd13z3"
    >
      <img
        alt="DSC07717"
        class="css-1ij2yax-ImageWrapper-AuthorChip e1shv2yg0"
        loading="lazy"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="css-dpf16q-AuthorChipContentWrapper e1jhd13z2"
    >
      <div
        class="css-ohez13-AuthorChipName e1jhd13z0"
      >
        <strong>
          Von 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
            href="https://example.com"
          >
            Foobar
          </a>
        </strong>
      </div>
    </div>
  </aside>
</DocumentFragment>
`;
